transcript search and highlighting

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -86,7 +86,11 @@ body {
 
 .highlight em {
   font-weight: bold;
-  background-color: yellow;
+  background-color: #61dafb;
   color: black;
   font-style: normal;
+}
+
+.transcript mark {
+  background-color: #61dafb;
 }
